refactor file handling and update HTML elements for better translation support

--- a/templates/index.html
+++ b/templates/index.html
@@ -347,7 +347,7 @@
                 <div class="result" id="github-result">
                     <p>Here's your result!</p>
                     <p><br></p>
-                    <a href="#" class="result-link" id="github-result-link" target="_blank"></a>
+                    <a href="#" class="result-link notranslate" id="github-result-link" target="_blank"></a>
                     <button onclick="copyToClipboard('github-result-link')" class="copy-btn" id="github-copy-btn">
                         Copy
                     </button>
@@ -375,7 +375,7 @@
                                 <label for="vup-code">VIP Code (optional)</label>
                                 <input type="text" id="vip-code" placeholder="VIP Code if any">
                             </div>
-                            <label for="file-input" class="file-upload-label">
+                            <label for="file-input" class="file-upload-label notranslate">
                                 <span id="file-label">Drag and drop files here or click to upload.</span>
                             </label>
                             <input type="file" id="file-input" required>
@@ -390,7 +390,7 @@
                 <div class="result" id="file-result">
                     <p>Your File is Ready!</p>
                     <p><br></p>
-                    <a href="#" class="result-link" id="file-result-link" target="_blank"></a>
+                    <a href="#" class="result-link notranslate" id="file-result-link" target="_blank"></a>
                     <button onclick="copyToClipboard('file-result-link')" class="copy-btn" id="file-copy-btn">
                         Copy
                     </button>
