add auto image conversion feature; implement checkbox in UI and backend processing

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,11 +77,16 @@
                             <div class="form-group">
                                 <label for="vip-code">VIP Code (optional)</label>
                                 <input type="text" id="vip-code" placeholder="VIP Code if any">
+                                <div class="auto-convert-wrapper">
+                                    <input type="checkbox" id="auto-convert" checked>
+                                    <label for="auto-convert">Optimize Image Size</label>
+                                </div>
                             </div>
                             <label for="file-input" class="file-upload-label notranslate">
                                 <span id="file-label">Drag and drop files here or click to upload.</span>
                             </label>
                             <input type="file" id="file-input" required>
+
                         </div>
                     </div>
                     <button type="submit" class="submit-btn">Upload</button>
@@ -104,7 +109,8 @@
 
     <footer class="footer">
         <p><br></p>
-        <p>&copy; 2025 <a href="https://haozhe.li">Haozhe Li</a>. All rights reserved. Proudly Open-Sourced on <a href="https://github.com/Haozhe-Li/CDN-Helper">Github</a>.
+        <p>&copy; 2025 <a href="https://haozhe.li">Haozhe Li</a>. All rights reserved. Proudly Open-Sourced on <a
+                href="https://github.com/Haozhe-Li/CDN-Helper">Github</a>.
         </p>
         <p><br>
         <div class="gtranslate_wrapper"></div>
