update image sources in index.html to use JSDelivr CDN for improved accessibility

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                         <li>Easy link sharing</li>
                         <li>Ensure your GitHub repository is public</li>
                         <li>All files should use JSDelivr CDN.</li>
-                        <img src="{{ url_for('static', filename='jsdelivr_tutorial.gif') }}" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                        <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/jsdelivr_tutorial.gif" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     </ul>
                 </div>
                 <form id="github-form" onsubmit="handleGithubSubmit(event)">
@@ -71,7 +71,7 @@
                         <li>Once uploaded, the link can be copied and shared directly.</li>
                         <li>All tools are free! However, without a VIP code, your file may have size and storage time
                             limitations.</li>
-                            <img src="{{ url_for('static', filename='cloudflare_tutorial.gif') }}" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                            <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/cloudflare_tutorial.gif" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     </ul>
                 </div>
                 <form id="file-form" onsubmit="handleFileSubmit(event)">
