--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <script>window.gtranslateSettings = { "default_language": "en", "native_language_names": true, "detect_browser_language": true, "languages": ["en", "ja", "zh-TW", "zh-CN"], "wrapper_selector": ".gtranslate_wrapper" }</script>
     <script src="https://cdn.gtranslate.net/widgets/latest/dropdown.js" defer></script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
@@ -34,7 +38,9 @@
                         <li>Easy link sharing</li>
                         <li>Ensure your GitHub repository is public</li>
                         <li>All files should use JSDelivr CDN.</li>
-                        <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/jsdelivr_tutorial.gif" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                        <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/jsdelivr_tutorial.gif"
+                            alt="GitHub Link Example"
+                            style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     </ul>
                 </div>
                 <form id="github-form" onsubmit="handleGithubSubmit(event)">
@@ -71,7 +77,9 @@
                         <li>Once uploaded, the link can be copied and shared directly.</li>
                         <li>All tools are free! However, without a VIP code, your file may have size and storage time
                             limitations.</li>
-                            <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/cloudflare_tutorial.gif" alt="GitHub Link Example" style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                        <img src="https://cdn.jsdelivr.net/gh/Haozhe-Li/CDN-Helper@4033982bc0bcd5d6e5bede3491babe4c417c0df7/static/cloudflare_tutorial.gif"
+                            alt="GitHub Link Example"
+                            style="max-width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     </ul>
                 </div>
                 <form id="file-form" onsubmit="handleFileSubmit(event)">
